--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,35 @@
-background-color: #ffffff
+.heading{
+    float: left;   
+    width: ;
+    padding: 5;
+	border left: : solid  #a57878;
+	font-size: 100%;
+    font-family: Georgia, Times, serif;
+    vertical-align: baseline \
+
+}
+
+.container{
+    margin: 0;
+	padding: 0;
+	border: solid #831212;
+	font-size: 100%;
+	font-family: Georgia, Times, serif;
+	vertical-align: baseline 
+}
+
+.Container2{
+    float: right;
+    width: 270px;
+    margin:
+	padding: 0;
+	border: solid #7c4343;
+	font-size: 100%;
+	font-family: Georgia, Times, serif;
+	vertical-align: baseline 
+}
+
+.about me{
+    float:right
+    
+}
