--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,3 +50,13 @@ a{
 footer {
 	background-color: #666666
 }
+
+.mailbox {
+    float: right;
+}
+
+#mailbox {
+    float: right;
+}
+#waterfall {
+    clear: both;
